# user_blog

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
blog/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
blog/management/commands/: create_posts.py  create_subscriptions.py
blog/migrations/: 0001_initial.py  0002_postuser_postuser_unique_user_and_post.py  0003_alter_post_blog_alter_postuser_user_and_more.py
config/: settings.py  urls.py
users/: models.py  urls.py
users/management/commands/: create_users.py
users/migrations/: 0001_initial.py
